Fix scrollbars and nav position

--- a/vue/src/assets/css/layout.scss
+++ b/vue/src/assets/css/layout.scss
@@ -63,7 +63,6 @@ body, html {
   color: $light-bgh;
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   margin: 0px;
-  overflow-y: hidden;
   padding: 0px;
 }
 *, *:before, *:after {
